--- a/css/main.css
+++ b/css/main.css
@@ -155,3 +155,49 @@
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
+
+/*CONTAINER CARDS */
+
+
+.img-card{
+    width: 64px;
+    height: 64px;
+    text-align: center;
+}
+
+.card-title{
+
+    font-family: Georgia;
+    font-size: 18px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.78;
+    letter-spacing: normal;
+    text-align: center;
+    color: #55415f;
+}
+
+.container-cards p {
+    font-family: Georgia;
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.77;
+  letter-spacing: normal;
+  text-align: center;
+  color: #807d77;
+}
+
+#parrafo-cards-outside {
+    font-family: Georgia;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.61;
+  letter-spacing: normal;
+  text-align: center;
+  color: #222222;
+}
