--- a/css/main.css
+++ b/css/main.css
@@ -246,3 +246,102 @@
   text-align: left;
   color: #55415f;
 }
+
+/*FOOTER*/
+
+.footer{
+    height: 274px;
+  background-color: #222222;
+}
+
+.footer-title{
+    font-family: Georgia;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+}
+
+.lastest-from-blog  h3{
+    font-family: Georgia;
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.23;
+  letter-spacing: normal;
+  text-align: left;
+  color: #9f81a9;
+}
+.lastest-from-blog h4{
+    font-size: 10px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: left;
+  color: #807d77;
+}
+
+.lastest-from-blog p {
+    font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.58;
+  letter-spacing: normal;
+  text-align: left;
+  color: #807d77;
+}
+
+.link-block li {
+    font-family: Georgia;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2;
+    letter-spacing: normal;
+    text-align: left;
+    color: #9f80a9;
+}
+
+.company-details p {
+    font-family: Georgia;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.58;
+    letter-spacing: normal;
+    text-align: left;
+    color: #807d77;
+}
+
+.newsletter input {
+    background-color: #353535;
+    border-radius: 5px;
+    border: none;
+}
+
+.copyright{
+    height: 60px;
+    background-color: #202020;
+    border-top: solid 1px #363636;
+}
+.copyright p{
+    font-family: Georgia;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-align: left;
+    color: #807d77;
+}
